--- a/WhereToPlay/app/src/main/res/layout/view_progress_dialog.xml
+++ b/WhereToPlay/app/src/main/res/layout/view_progress_dialog.xml
@@ -13,8 +13,9 @@
             android:id="@+id/_progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:indeterminateDrawable="@drawable/progress_drawable_white"/>
-
+            style="@style/my_progress_dialog"
+            android:layout_gravity="center_horizontal"
+        />
         <TextView
             android:id="@+id/_tv_loading_msg"
             android:layout_width="wrap_content"
