--- a/WhereToPlay/app/src/main/res/layout/activity_settings.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_settings.xml
@@ -51,6 +51,7 @@
         <com.fanc.wheretoplay.view.ItemView
             android:id="@+id/iv_change_environment"
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:onClick="onViewClick"/>
 
