--- a/WhereToPlay/app/src/main/res/layout/activity_detaels_order.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_detaels_order.xml
@@ -239,6 +239,7 @@
                     android:textColor="#999999" />
 
                 <TextView
+                    android:id="@+id/tv_copy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
