--- a/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
@@ -1,44 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
 
-        <variable
-            name="score"
-            type="com.fanc.wheretoplay.datamodel.ScoreList.ContentBean.ListBean"/>
-    </data>
 
-    <LinearLayout
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
         android:padding="@dimen/padding_15">
 
-        <TextView
-            android:id="@+id/tv_item_integral_title"
+        <LinearLayout
+            android:id="@+id/ll"
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{score.name}"
-            android:textColor="#333333"
-            android:textSize="@dimen/normal_textsize"/>
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_item_integral_get_way"
-            android:layout_width="@dimen/width_0"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:layout_weight="1"
-            android:text="@string/get_integral_way"
-            android:textColor="#333333"
-            android:textSize="@dimen/normal_textsize"/>
+            <TextView
+                android:id="@+id/tv_item_integral_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#333333"
+                android:textSize="@dimen/normal_textsize" />
 
-        <TextView
-            android:id="@+id/tv_item_integral_no"
+            <TextView
+                android:id="@+id/tv_item_integral_get_way"
+                android:layout_width="@dimen/width_0"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_weight="1"
+                android:text="@string/get_integral_way"
+                android:textColor="#333333"
+                android:textSize="@dimen/normal_textsize" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:text='@{"+"+(int)Double.parseDouble(score.score_detail)}'
-            android:textColor="#c4483c"
-            android:textSize="@dimen/textsize_level2"/>
-    </LinearLayout>
+            android:orientation="vertical">
 
-</layout>
+            <TextView
+                android:id="@+id/tv_item_integral_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_10"
+
+                android:textColor="#c4483c"
+                android:textSize="@dimen/textsize_level2" />
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:textColor="#c4483c"
+                android:textSize="@dimen/textsize_level2" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
