--- a/WhereToPlay/app/src/main/res/drawable/shape_slide_left_line.xml
+++ b/WhereToPlay/app/src/main/res/drawable/shape_slide_left_line.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <size android:height="@dimen/height_2" android:width="@dimen/width_60"/>
-    <solid android:color="@color/text_gray"/>
+    <solid android:color="#00000000"/>
 </shape>
