--- a/WhereToPlay/app/src/main/res/layout/activity_main.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_main.xml
@@ -1,252 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <android.support.constraint.ConstraintLayout
+    <com.fanc.wheretoplay.view.MyViewPager
+        android:id="@+id/mvp_main"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/ll_main_tab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="@dimen/line_height"
+        android:background="@color/pay_reserve_list_divider_white"
+        app:layout_constraintBottom_toTopOf="@+id/ll_main_tab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <!--底部选择栏-->
+    <RadioGroup
+        android:id="@+id/ll_main_tab"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
-        <com.fanc.wheretoplay.view.MyViewPager
-            android:id="@+id/mvp_main"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/ll_main_tab"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="0dp" />
+        <RadioButton
+            android:id="@+id/rb1"
+            android:layout_width="@dimen/width_0"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:drawableTop="@drawable/reserve_book"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingTop="4dp"
+            android:text="预订"
+            android:textColor="@color/reserve_unpress"
+            android:textSize="@dimen/textsize_10" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/line_height"
-            android:background="@color/pay_reserve_list_divider_white"
-            app:layout_constraintBottom_toTopOf="@+id/ll_main_tab"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-        <!--底部选择栏-->
-        <LinearLayout
-            android:id="@+id/ll_main_tab"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteX="0dp">
+        <RadioButton
+            android:id="@+id/rb2"
+            android:layout_width="@dimen/width_0"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:drawableTop="@drawable/reserve_pay"
+            android:gravity="center"
+            android:paddingTop="4dp"
+            android:orientation="vertical"
+            android:text="支付"
+            android:textColor="@color/reserve_unpress"
+            android:textSize="@dimen/textsize_10">
 
-            <LinearLayout
-                android:id="@+id/ll_maintab_reserve"
-                android:layout_width="@dimen/width_0"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:onClick="doClick"
-                android:orientation="vertical"
+        </RadioButton>
 
-                >
+        <RadioButton
+            android:id="@+id/rb3"
+            android:layout_width="@dimen/width_0"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:drawableTop="@drawable/discover"
+            android:gravity="center"
+            android:paddingTop="4dp"
+            android:orientation="vertical"
+            android:text="发现"
+            android:textColor="@color/reserve_unpress"
+            android:textSize="@dimen/textsize_10">
 
-                <ImageView
-                    android:id="@+id/iv_main_tab_reserve"
-                    android:layout_width="@dimen/width_20"
-                    android:layout_height="@dimen/height_20"
-                    android:src="@drawable/reserve_book" />
+        </RadioButton>
 
-                <TextView
-                    android:id="@+id/tv_main_tab_reserve"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/height_20"
-                    android:gravity="center"
-                    android:text="@string/reserve"
-                    android:textColor="@color/reserve_unpress"
-                    android:textSize="@dimen/textsize_10" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_main_tab_pay"
-                android:layout_width="@dimen/width_0"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:onClick="doClick"
-                android:orientation="vertical"
-
-                >
-
-                <ImageView
-                    android:id="@+id/iv_main_tab_pay"
-                    android:layout_width="@dimen/width_20"
-                    android:layout_height="@dimen/height_20"
-                    android:src="@drawable/reserve_pay" />
-
-                <TextView
-                    android:id="@+id/tv_main_tab_pay"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/height_20"
-                    android:gravity="center"
-                    android:text="@string/pay"
-                    android:textColor="@color/reserve_unpress"
-                    android:textSize="@dimen/textsize_10" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_main_tab_discover"
-                android:layout_width="@dimen/width_0"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:onClick="doClick"
-                android:orientation="vertical"
-
-                >
-
-                <ImageView
-                    android:id="@+id/iv_main_tab_discover"
-                    android:layout_width="@dimen/width_20"
-                    android:layout_height="@dimen/height_20"
-                    android:src="@drawable/discover" />
-
-                <TextView
-                    android:id="@+id/tv_main_tab_discover"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/height_20"
-                    android:gravity="center"
-                    android:text="@string/discover"
-                    android:textColor="@color/reserve_unpress"
-                    android:textSize="@dimen/textsize_10" />
+        <RadioButton
+            android:id="@+id/rb4"
+            android:layout_width="@dimen/width_0"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:drawableTop="@drawable/mine"
+            android:gravity="center"
+            android:paddingTop="4dp"
+            android:orientation="vertical"
+            android:text="我的"
+            android:textColor="@color/reserve_unpress"
+            android:textSize="@dimen/textsize_10">
 
 
-            </LinearLayout>
+        </RadioButton>
 
-            <LinearLayout
-                android:id="@+id/ll_main_tab_mine"
-                android:layout_width="@dimen/width_0"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:onClick="doClick"
-                android:orientation="vertical"
+    </RadioGroup>
 
-                >
-
-                <ImageView
-                    android:id="@+id/iv_main_tab_mine"
-                    android:layout_width="@dimen/width_20"
-                    android:layout_height="@dimen/height_20"
-                    android:src="@drawable/mine" />
-
-                <TextView
-                    android:id="@+id/tv_main_tab_mine"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/height_20"
-                    android:gravity="center"
-                    android:text="@string/mine"
-                    android:textColor="@color/reserve_unpress"
-                    android:textSize="@dimen/textsize_10" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <!--
-                    <FrameLayout
-                        android:id="@+id/fl_main_tab"
-                        android:layout_width="110dp"
-                        android:layout_height="60dp"
-                        android:layout_marginBottom="19dp"
-                        app:layout_constraintBottom_toBottomOf="@+id/ll_main_tab"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        tools:layout_editor_absoluteX="0dp">
-
-                        <ImageView
-                            android:id="@+id/iv_pay_big"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:src="@drawable/pay_selected"/>
-
-                        <ImageView
-                            android:id="@+id/iv_discover_big"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:src="@drawable/discover_selected"/>
-
-                        <ImageView
-                            android:id="@+id/iv_reserve_big"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:src="@drawable/reserve_selected"/>
-                    </FrameLayout>
-        -->
-
-        <TextView
-            android:id="@+id/tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Load Patch"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.416" />
-
-        <TextView
-            android:id="@+id/tv2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kill Self"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.933" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="版本更新"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/tv"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv2" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="热更新真的好折腾人"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/imageView"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv2"
-            app:layout_constraintVertical_bias="0.51" />
+</android.support.constraint.ConstraintLayout>
 
 
-    </android.support.constraint.ConstraintLayout>
 
-</layout>
 
