--- a/WhereToPlay/app/src/main/res/layout/fragment_date.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_date.xml
@@ -49,6 +49,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_date"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
