--- a/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
@@ -1,64 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="@dimen/padding_15">
 
-
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/padding_15">
+        android:layout_centerVertical="true">
 
-        <LinearLayout
-            android:id="@+id/ll"
-            android:layout_centerVertical="true"
+        <TextView
+            android:id="@+id/tv_item_integral_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/tv_item_integral_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#333333"
-                android:textSize="@dimen/normal_textsize" />
-
-            <TextView
-                android:id="@+id/tv_item_integral_get_way"
-                android:layout_width="@dimen/width_0"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:layout_weight="1"
-                android:text="@string/get_integral_way"
-                android:textColor="#333333"
-                android:textSize="@dimen/normal_textsize" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:textColor="#333333"
+            android:textSize="12dp" />
 
-            <TextView
-                android:id="@+id/tv_item_integral_no"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
+        <TextView
+            android:id="@+id/tv_item_integral_get_way"
+            android:layout_width="@dimen/width_0"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
+            android:text="@string/get_integral_way"
+            android:textColor="#333333"
+            android:textSize="12dp" />
 
-                android:textColor="#c4483c"
-                android:textSize="@dimen/textsize_level2" />
-            <TextView
-                android:id="@+id/tv_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:textColor="#c4483c"
-                android:textSize="@dimen/textsize_level2" />
+    </LinearLayout>
 
-        </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical">
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_item_integral_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:gravity="right"
+            android:textColor="#c4483c"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:gravity="right"
+            android:textColor="#c4483c"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+
+</RelativeLayout>
 
