--- a/WhereToPlay/app/src/main/res/layout/couponfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/couponfragment.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <TextView
+        android:layout_width="match_parent"
+        android:text="1212"
+        android:layout_height="wrap_content" />
 
     <com.fanc.wheretoplay.view.TitleBarView
         android:id="@+id/tbv"
@@ -12,19 +14,20 @@
         android:layout_height="wrap_content" />
 
     <android.support.design.widget.TabLayout
+        android:layout_below="@+id/tbv"
         android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
         app:tabSelectedTextColor="#C4483C"
         app:tabTextColor="#333333"
         app:tabIndicatorColor="#C4483C"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tbv" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+        android:layout_below="@+id/tab_layout"
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tab_layout" />
+        android:layout_height="wrap_content" />
+
 
 
 </RelativeLayout>
