--- a/WhereToPlay/app/src/main/res/layout/fragment_discount_coupon.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_discount_coupon.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <com.fanc.wheretoplay.view.TopMenu
+        android:id="@+id/tm_discount_coupon"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content" />
 
-        <com.fanc.wheretoplay.view.TopMenu
-            android:id="@+id/tm_discount_coupon"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_discount_coupon"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_0"
-            android:background="@color/white"
-            android:layout_weight="1"/>
-    </LinearLayout>
-</layout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_discount_coupon"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_0"
+        android:layout_weight="1"
+        android:background="@color/white" />
+</LinearLayout>
