--- a/WhereToPlay/app/src/main/res/layout/packagefragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/packagefragment.xml
@@ -157,9 +157,17 @@
                     android:layout_below="@id/tv_storeName2"
                     android:layout_marginBottom="12dp"
                     android:layout_marginLeft="12dp"
+                    android:drawableLeft="@drawable/reserve_address"
+                    android:drawablePadding="8dp"
                     android:textColor="#ff666666"
                     android:textSize="13dp"
                     tools:text="黄浦区淮海路东段嵩山路77号" />
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/phone1" />
+
             </RelativeLayout>
 
 
@@ -185,30 +193,60 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/tv_falseMoney1"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
-                android:gravity="right"
-                tools:text="总价值     2980元" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_realMoney1"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right|center_vertical"
+                    android:text="总价值" />
+
+                <TextView
+                    android:id="@+id/tv_falseMoney1"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginRight="12dp"
+                    android:layout_weight="3"
+                    android:gravity="right"
+                    android:textColor="#ff333333"
+                    tools:text="2580元" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="12dp"
-                android:gravity="right"
-                android:textColor="#ff333333"
-                tools:text="套餐价     2580元" />
+                android:orientation="horizontal">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="套餐价" />
+
+                <TextView
+                    android:id="@+id/tv_realMoney1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="12dp"
+                    android:layout_weight="3"
+                    android:gravity="right"
+                    android:textColor="@color/text_red"
+                    tools:text="2580元" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_detail"
                 android:layout_width="match_parent"
-                android:textColor="#ff333333"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp" />
+                android:layout_margin="12dp"
+                android:textColor="#ff333333" />
 
             <View
                 android:layout_width="match_parent"
